@@ -28,6 +28,7 @@ use FusionInventory::Agent::Network;
 use FusionInventory::Agent::Storage;
 use FusionInventory::Agent::XML::Response::Prolog;
 use FusionInventory::Agent::XML::Query::Inventory;
+use FusionInventory::Agent::Tools;
 use FusionInventory::Logger;
 
 sub main {
@@ -199,25 +200,7 @@ sub initModList {
             @FusionInventory::Agent::Task::Inventory::ModuleToLoad::list;
     }
 
-    if ($config->{devlib}) {
-        # devlib enable, I only search for backend module in ./lib
-        push (@dirToScan, './lib');
-    } else {
-        foreach (@INC) {
-# perldoc lib
-# For each directory in LIST (called $dir here) the lib module also checks to see
-# if a directory called $dir/$archname/auto exists. If so the $dir/$archname
-# directory is assumed to be a corresponding architecture specific directory and
-# is added to @INC in front of $dir. lib.pm also checks if directories called
-# $dir/$version and $dir/$version/$archname exist and adds these directories to @INC.
-            my $autoDir = $_.'/'.$Config::Config{archname}.'/auto/FusionInventory/Agent/Task/Inventory';
-
-            next if ! -d || (-l && -d readlink) || /^(\.|lib)$/;
-            next if ! -d $_.'/FusionInventory/Agent/Task/Inventory';
-            push @dirToScan, $_;
-            push @dirToScan, $autoDir if -d $autoDir;
-        }
-    }
+    @dirToScan = getFusionInventoryLibdir($config);
     if (@dirToScan) {
         eval {
             require File::Find;
