@@ -45,7 +45,8 @@ Revision history for FusionInventory::Agent
        * injector: minor clean up in the --help menu
        * Add 2011 in the copyright years
        * Win32: set HARDWARE/DESCRIPTION
-       * Tools.pm: add getVersionFromTaskModuleFile()
+       * Tools: add getVersionFromTaskModuleFile()
+       * Tools: move the code used to find .pm in @INC in getFusionInventoryLibdir()
 
 2.1.7  Sun, 12 Dec 2010 20:05:16 +01000
        * RPC: Better message if access is denied
